[metadata]
name = pycraft
version = attr: pycraft.__version__
description = Python tools for manipulating Minecraft save data files
url = https://github.com/PapaMarky/pycraft
author = Mark Dyer
author_email = heymarky@gmail.com
keywords =
  minecraft
  diy
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: DIY
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: DIY
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

license_files =
  ../LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
package_dir=
    =.
packages=find:
install_requires = 
    Python-NBT >= 1.3.0
    Pillow
[options.packages.find]
where=.

# [options.extras_require]
# tests =
#   pytest
#   flake8
#   mypy

# [options.entry_points]
# console_scripts =
# #  joesprog = mypkg:__main__:cli